# shadow-light-2D

./: .gitignore  CMakeLists.txt
shaders/: light.frag
src/: main.cpp
